# ddsP-Sinfo_2026-Workshop

./: GETTING_READY.md  README.md  docker-compose.yml  pyproject.toml
fenix_scraper/: README.md  pyproject.toml
fenix_scraper/fenix_scraper/: __init__.py  main.py
fenix_scraper/fenix_scraper/parsers/: html.py
fenix_scraper/fenix_scraper/resources/: .env.example  config.yaml
fenix_scraper/fenix_scraper/scrapers/: course_scraper.py  generic_page_visitor.py  generic_scraper.py  subject_scraper.py
fenix_scraper/fenix_scraper/utils/: logger.py  settings.py  web_utils.py
fenix_scraper/fenix_scraper/writers/: markdown.py
frontend/: README.md  pyproject.toml
frontend/.streamlit/: config.toml
frontend/frontend/: __init__.py  app.py
frontend/frontend/pages/: 1_Knowledge_Base.py  2_Document_Explorer.py  3_Embedding_Playground.py  4_Table_Management.py  apis_rest.py  building_knowledge.py  embeddings.py  explore_data.py  landing.py  openclaw_complex_skills.py  openclaw_intro.py  openclaw_setup.py  openclaw_simple_skills.py  openclaw_workspace.py  rag_in_action.py
frontend/frontend/utils/: __init__.py  api.py  layout.py  theme.py
frontend/tests/: test_app.py
frontend/tests/pages/: test_apis_rest.py  test_document_explorer.py  test_embedding_playground.py  test_knowledge_base.py  test_openclaw_complex_skills.py  test_openclaw_intro.py  test_openclaw_setup.py  test_openclaw_simple_skills.py  test_openclaw_workspace.py  test_table_management.py
frontend/tests/utils/: _layout_helper.py  test_api.py  test_layout.py  test_theme.py
knowledge-service/: .gitignore  logger.py  main.py  pyproject.toml  settings.py
knowledge-service/models/: __init__.py  answer.py  message.py  query.py
knowledge-service/resources/: .env.example  config.yaml
knowledge_service/: README.md  __init__.py  logger.py  main.py  pyproject.toml  pytest.ini  settings.py
knowledge_service/knowledge_service/: __init__.py  main.py
knowledge_service/knowledge_service/entities/: document_embedding.py
knowledge_service/knowledge_service/jobs/: sync_obsidian.py
knowledge_service/knowledge_service/loaders/: obsidian_loader.py
knowledge_service/knowledge_service/models/: answer.py  document.py  document_source.py  document_table.py  embedding.py  message.py  query.py  vault_info.py
knowledge_service/knowledge_service/resources/: .env.example  config.yaml
knowledge_service/knowledge_service/services/: ai_service.py  db_service.py
knowledge_service/knowledge_service/utils/: logger.py  settings.py
knowledge_service/loaders/: obsidian_loader.py
knowledge_service/models/: __init__.py
knowledge_service/requests/: documents.http  embeddings.http  obsidian-vaults.http  welcome.http
knowledge_service/resources/: .env.example  config.yaml
knowledge_service/services/: ai_service.py
knowledge_service/tests/entities/: test_document_embedding.py
knowledge_service/tests/jobs/: test_sync_obsidian.py
knowledge_service/tests/loaders/: test_obsidian_loader.py
knowledge_service/tests/models/: test_answer.py  test_document.py  test_document_source.py  test_document_table.py  test_embedding.py  test_message.py  test_query.py  test_vault_info.py
knowledge_service/tests/services/: test_ai_service.py  test_db_service.py
knowledge_service/tests/utils/: test_logger.py  test_settings.py
knowledge_service/utils/: settings.py
obsidian-vaults/test-sinfo-fenix-vault/.obsidian/: graph.json  workspace.json
obsidian-vaults/test-sinfo-fenix-vault/course-leic-a/: 02-announcements.md
obsidian-vaults/test-sinfo-fenix-vault/course-leic-a/subject-fp451795/: 04-evaluatio-methods.md  06-syllabus.md  10-projects.md  11-solution-1st-exam.md
obsidian-vaults/test-sinfo-fenix-vault/🗂️ Course: LEIC-A/: 📄 01 - Course Description.md  📄 03 - Admission Requirements.md  📄 04 - Master Transition.md
obsidian-vaults/test-sinfo-fenix-vault/🗂️ Course: LEIC-A/📁 Subject: FP451795/: 📄 01 - Initial Page.md  📄 02 - Evaluation.md  📄 03 - Bibliographic References.md  📄 05 - Objectives.md  📄 07 - Shifts.md  📄 08 - Python Installation.md  📄 09 - Class Planning.md  📄 12 - Solution 2nd Exam.md
obsidian-vaults/test-sinfo-vault/: Welcome.md
obsidian-vaults/test-sinfo-vault/.obsidian/: workspace.json
setup-resources/: setup_macos.sh  setup_windows.ps1
workspace-trivial-fenix-sinfo-2026/: IDENTITY.md  README.md  USER.md  pyproject.toml
workspace-trivial-fenix-sinfo-2026/.openclaw/: workspace-state.json
workspace-trivial-fenix-sinfo-2026/skills/: touch.txt
workspace-trivial-fenix-sinfo-2026/skills/exam-tester/: SKILL.md
workspace-trivial-fenix-sinfo-2026/skills/fenix-browser/: SKILL.md
workspace-trivial-fenix-sinfo-2026/skills/fenix-browser/scripts/: convert_to_markdown.py  get_courses.sh  get_subject_page.sh  get_subjects.sh  parse_courses.py  parse_subject_page.py  parse_subjects.py
workspace-trivial-fenix-sinfo-2026/skills/fenix-login/: SKILL.md
workspace-trivial-fenix-sinfo-2026/skills/knowledge-ingest/: SKILL.md
workspace-trivial-fenix-sinfo-2026/skills/knowledge-query/: SKILL.md
workspace-trivial-fenix-sinfo-2026/skills/vault-management/: SKILL.md
workspace-trivial-fenix-sinfo-2026/skills/weather-fetcher/: SKILL.md
