[project]
name = "frontend"
version = "0.1.0"
description = "Streamlit frontend for the Sinfo 2026 workshop knowledge service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit==1.45.0",
    "plotly==6.0.0",
    "requests==2.32.5",
    "numpy==2.0.0",
    "scikit-learn==1.5.0",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "ruff==0.15.1",
    "types-requests==2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build]
packages = ["frontend"]

[tool.ruff]
src = ["frontend"]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # pydocstyle
    "S",   # flake8-bandit
    "ANN", # flake8-annotations
]
ignore = ["D203", "D212", "D211", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
# Pages are standalone Streamlit scripts, not modules — relax docstring/annotation rules
"frontend/pages/**" = ["D100", "D103", "ANN"]
"frontend/app.py" = ["D100", "D103", "ANN"]
"tests/**" = ["S101", "D", "S", "ANN401", "E402"]

[tool.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "sklearn.*",
]
ignore_missing_imports = true
